public/css/style.css
/* ... */
.btn-disabled { background-color: #b4b4b4; border-color: #9f9f9f; }

.btn-large { font-size: 1.2rem; padding: 0.70rem 1rem; }
.btn-medium { font-size: 1rem; padding: 0.5rem 1rem; }



/* --------------------- */
/* ------ IMAGES  ------ */
/* --------------------- */

/* FLAT ICONS */

.arrow-left { position: relative; left: -40px; width: 20px; }
.arrow-right { position: relative; left: 40px; width: 20px; }
.arrow-down { position: absolute; left: 70px; bottom: -10px; z-index: 10; }

.btn-icons-small-right-container { position: absolute; top: 4px; right: 12px; font-size: 1.5rem; z-index: 10; }
.btn-icons-small-right-container a { color: white; }

.btn-icons-medium-right-container { position: absolute; top: 8px; right: 8px; font-size: 2rem; z-index: 10; }
.btn-icons-medium-right-container a { color: white; }

.btn-icon-display { position: absolute; right: -160px; top: 96px; font-size: 8rem; text-decoration: none; display: flex; justify-content: center; align-items: center; text-align: center; }
.btn-icon-display a { color: white; }
.btn-icon-display a:hover { text-decoration: none; }

/* PIXEL ICONS */

.icon-lock { position: absolute;  top: 18%; left: 40%; width: 22%; z-index: 10 }
.icon-lock-character { position: absolute;  top: 35%; left: 35%; width: 30%; z-index: 10; filter: grayscale(100%); }
.icon-ornament-container { width: 36px; height: auto; }
.icon-dead-big { position: absolute; top: 4rem; left: 0.20rem; z-index: 1; width: 156px; }

.characters-icons-container { position: absolute; top: -12px; left: 8px; z-index: 10; }

.character-icon-medium { width: 48px; border-radius: 4px; }
.character-icon-large { width: 64px; border-radius: 5px; }
.character-icon-small { width: 26px; }
.character-icon-dead { position: absolute; top: -4px; left: -2px; width: 72px;  z-index: 1; }

a.character-icon { display: inline-block; font-weight: bold; }

/* IMAGES SIZING */

#logo { width: 120px; height: auto; }

.img-24 { min-width: 12px; max-width: 24px; }
.img-32 { min-width: 16px; max-width: 32px; }
.img-36 { min-width: 18px; max-width: 36px; }
.img-48 { min-width: 24px; max-width: 48px; }
.img-64 { min-width: 32px; max-width: 64px; }
.img-96 { min-width: 48px; max-width: 96px; }
.img-128 { min-width: 64px; max-width: 128px; }
.img-160 { min-width: 80px; max-width: 160px; }
.img-240 { min-width: 120px; max-width: 240px; }
.img-320 { min-width: 160px; max-width: 320px; }
.img-360 { min-width: 180px; max-width: 360px; }
.img-480 { min-width: 240px; max-width: 480px; }
.img-540 { min-width: 320px; max-width: 540px; }
.img-640 { min-width: 320px; max-width: 640px; }

.corner-badge { position: absolute; top: -12px; left: -12px; z-index: 100; width: 48px; }

/* EFFECTS */

.shadowed { box-shadow: 2px 2px 4px rgba(0, 0, 0, .4); }

.rounded-8 { border-radius: 0.5rem; }
.rounded-16 { border-radius: 1rem; }

.translucide { filter: opacity(0.30); }
.semi-opaque { filter: opacity(0.50); }
.grayscale { filter: grayscale(100%); }
.darken { filter: brightness(0.5); }
.darken-more { filter: brightness(0.2); }
.dead { filter: grayscale(100%) brightness(0.4) sepia(100%) hue-rotate(-50deg) saturate(300%); }

.outlined { box-shadow: 2px 2px 0 #0f0, -2px -2px 0 #0f0, 2px -2px 0 #0f0, -2px 2px 0 #0f0; }

.mask { mask-image: linear-gradient(to top, rgba(0,0,0,0.2),rgba(0,0,0,1),rgba(0,0,0,1),rgba(0,0,0,1));
        -webkit-mask-image: linear-gradient(to top, rgba(0,0,0,0.2),rgba(0,0,0,1),rgba(0,0,0,1),rgba(0,0,0,1)); }

.mask-bg-dark { background-color: black; border-radius: 4px; }
.mask-bg-dark img { mask-image: linear-gradient(to top, rgba(0,0,0,0.25),rgba(0,0,0,0.50),rgba(0,0,0,1),rgba(0,0,0,1)); -webkit-mask-image: linear-gradient(to top, rgba(0,0,0,0.25),rgba(0,0,0,0.50),rgba(0,0,0,1),rgba(0,0,0,1)); }

/* ANIMATIONS */

.hover-zoom { transition: 0.5s; }
.hover-zoom-X2 { transition: 0.33s; }

.hover-zoom:hover {  transform: scale(1.05); transition: 0.5s; }
.hover-zoom-X2:hover { transform: scale(1.125); transition: 0.33s; }

.hover-opaque:hover { filter: opacity(1); transition: 0.5s; }
.hover-shine:hover { filter: brightness(1.3); transition: 0.5s; }
.hover-darked:hover { filter: brightness(0.7);  transition: 0.5s; }
.hover-bright:hover { filter: brightness(1); transition: 0.5s; }

.fa-animation-delay { --fa-animation-delay: 0.67s; }



/* -------------------------- */
/* ----- OTHER ELEMENTS ----- */
/* -------------------------- */                  

/* NAV */

#navigation-bar { position: relative; z-index: 10; box-shadow: 0px 2px 8px black; }
nav .active { font-weight: bold; border-bottom: 3px solid #EA2027; }
.connected { color: white; text-align: right; }

/* ALERT */

.alert-flash { position: absolute; left: 50%; top: 0px; transform: translate(-50%, -50%); z-index: 100; }
.alert-persist { display: inline-block; font-size: 1rem; color: rgba(255, 255, 255, .4); background-color: rgba(0, 0, 0, .4) !important; border-color: rgba(255, 255, 255, 0.2) !important; margin-bottom: 0; }

/* SEPARATOR & DIVIDER */

.separator-chapter {    display: block; color: #fff; min-height:0.4rem; background-color: rgb(40, 0, 0); }
.divider-40 { width: 40%; }
.divider-40 hr { background-color: #ffbbbb; height: 1px; width: 100%; }

/* FOOTER */

#footer1 { min-height: 24vh; background-color: #28323C; color:#b4b4b4; }
#footer2 { min-height: 8vh; background-color: #1E242A; color: #aaa; }
.footer-link { color:#a0a0a0; }
.footer-link:hover { color:#fff; text-decoration: underline; }
#footer1 ul, #footer2 ul { list-style:outside none none; padding: 0; }
#social-medias { font-size: 2rem; }

